@@ -10,7 +10,7 @@ GUI_SRCS = \
 	gui/gtk/MonoCov.cs \
 	gui/gtk/CoverageView.cs \
 	gui/gtk/SourceWindow.cs
-GUI_LIBS = -pkg:gtk-sharp -pkg:gnome-sharp -pkg:glade-sharp -r System.Drawing -resource:gui/gtk/monocov.glade,monocov.glade
+GUI_LIBS = -pkg:gtk-sharp -pkg:gnome-sharp -pkg:glade-sharp -r:System.Drawing -resource:gui/gtk/monocov.glade,monocov.glade
 else
 GUI_SRCS = \
 	gui/qt/MonoCov.cs \
@@ -33,7 +33,7 @@ SRCS = \
 	$(GUI_SRCS)
 
 monocov.exe: $(SRCS) style.xsl .gui-$(GUI)
-	mcs -g /target:exe /out:$@ -define:GUI_$(GUI) -r Mono.CompilerServices.SymbolWriter -r Mono.GetOptions $(GUI_LIBS) $(SRCS) -resource:style.xsl,style.xsl -resource:trans.gif,trans.gif
+	mcs -debug /target:exe /out:$@ -define:GUI_$(GUI) -r:Mono.CompilerServices.SymbolWriter -r:Mono.GetOptions $(GUI_LIBS) $(SRCS) -resource:style.xsl,style.xsl -resource:trans.gif,trans.gif
 
 .gui-gtk:
 	@rm -f .gui-*
@@ -44,13 +44,13 @@ monocov.exe: $(SRCS) style.xsl .gui-$(GUI)
 	@touch .gui-qt
 
 symbols.exe: symbols.cs
-	mcs -g /target:exe /out:$@ -r Mono.CompilerServices.SymbolWriter symbols.cs
+	mcs -debug /target:exe /out:$@ -r:Mono.CompilerServices.SymbolWriter symbols.cs
 
 nunit-console.exe: nunit-console.cs
-	mcs -r nunit.framework -r nunit.core -r nunit.util -r Mono.GetOptions nunit-console.cs
+	mcs -r:nunit.framework -r:nunit.core -r:nunit.util -r:Mono.GetOptions nunit-console.cs
 
 libmono-profiler-monocov.so: coverage.c
-	$(CC) -g -I$(MONO_ROOT) `pkg-config --cflags glib-2.0` --shared -o $@ $^
+	$(CC) -g -I$(MONO_ROOT) `pkg-config --cflags glib-2.0` --shared -fPIC -o $@ $^
 
 test:
 	mcs -g test.cs
